--- a/Sportify/Base.lproj/Main.storyboard
+++ b/Sportify/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="361" height="140"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sports" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bt5-IN-LMo">
-                                                <rect key="frame" x="137.66666666666663" y="29.666666666666671" width="85" height="34"/>
+                                                <rect key="frame" x="137.66666666666666" y="29.666666666666671" width="85" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
                                                 <color key="textColor" name="PrimaryColor"/>
                                                 <nil key="highlightedColor"/>
@@ -142,12 +142,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1608.3969465648854" y="27.464788732394368"/>
+            <point key="canvasLocation" x="1550" y="25"/>
         </scene>
         <!--Leagues View Controller-->
         <scene sceneID="e79-ni-qVf">
             <objects>
-                <viewController id="Jdc-vb-lfA" customClass="LeaguesViewController" customModule="Sportify" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LeaguesViewController" id="Jdc-vb-lfA" customClass="LeaguesViewController" customModule="Sportify" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="axM-kp-PFy">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -184,7 +184,7 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Leagues" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zpW-tB-V8q">
-                                <rect key="frame" x="16" y="71" width="377" height="40"/>
+                                <rect key="frame" x="16" y="88" width="377" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <nil key="textColor"/>
@@ -206,7 +206,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i7r-Lh-EaY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2509.1603053435115" y="27.464788732394368"/>
+            <point key="canvasLocation" x="130.53435114503816" y="7.746478873239437"/>
         </scene>
         <!--Sports-->
         <scene sceneID="oEr-TR-MFa">
